--- a/app/src/main/res/layout/activity_check_item.xml
+++ b/app/src/main/res/layout/activity_check_item.xml
@@ -22,7 +22,8 @@
     <ImageView
         android:layout_width="@dimen/abc_dropdownitem_icon_width"
         android:layout_height="@dimen/abc_dropdownitem_icon_width"
-        android:layout_below="@+id/imageViewCheckStatus"
+        android:layout_below="@+id/toggleButtonCheckItem"
+        android:id="@+id/imageViewCheckStatus"
         android:layout_centerInParent="true"
         android:contentDescription="@string/string_accessibility_itemCheckStatus" />
 
